# POCRuleSystem

./: .gitignore  CMakeLists.txt  README.md  Référence.md
include/: database.hpp  database.hpp.autosave  parsing.hpp  parsing.hpp.autosave  prompt.hpp  prompt.hpp.autosave  rule.hpp  rule.hpp.autosave  uglytree.hpp  util.hpp
include/ext/: json.hpp  tinydir.h
include/ext/chaiscript/dispatchkit/: dispatchkit.hpp
src/: database.cpp  main.cpp  prompt.cpp  rule.cpp
